fix the text wrap issue on safari

--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -509,3 +509,8 @@ $desktop: 960px + (2 * $gap) !default;
     padding-top: 6rem;
     padding-bottom: 4rem;
 }
+
+.navbar .navbar-item
+{
+  white-space: nowrap;
+  }
